--- a/index.html
+++ b/index.html
@@ -63,22 +63,17 @@
 
 </div>
 <div class="container">
-  <h2>Stacked form</h2>
+  <h2>Compila il seguente modulo:</h2>
   <form action="/action_page.php">
     <div class="form-group">
       <label for="email">Email:</label>
-      <input type="email" class="form-control" id="email" placeholder="Enter email" name="email">
+      <input type="email" class="form-control" id="email" placeholder="mariorossi88@gmail.com" name="email">
     </div>
     <div class="form-group">
       <label for="pwd">Password:</label>
-      <input type="password" class="form-control" id="pwd" placeholder="Enter password" name="pswd">
+      <input type="password" class="form-control" id="pwd" placeholder="Password" name="pswd">
     </div>
-    <div class="form-group form-check">
-      <label class="form-check-label">
-        <input class="form-check-input" type="checkbox" name="remember"> Remember me
-      </label>
-    </div>
-    <button type="submit" class="btn btn-primary">Submit</button>
+    <button type="submit" class="btn btn-primary">Premi qui!</button>
   </form>
 </div>
 
