--- a/index.html
+++ b/index.html
@@ -66,14 +66,18 @@
   <h2>Compila il seguente modulo:</h2>
   <form action="/action_page.php">
     <div class="form-group">
-      <label for="email">Email:</label>
-      <input type="email" class="form-control" id="email" placeholder="mariorossi88@gmail.com" name="email">
+      <label for="nome">Nome:</label>
+      <input type="nome" class="form-control" id="nome" placeholder="Mario Rossi" name="nome">
     </div>
     <div class="form-group">
-      <label for="pwd">Password:</label>
-      <input type="password" class="form-control" id="pwd" placeholder="Password" name="pswd">
+      <label for="età">Età:</label>
+      <input type="età" class="form-control" id="età" placeholder="23" name="età">
     </div>
-    <button type="submit" class="btn btn-primary">Premi qui!</button>
+    <div class="form-group">
+      <label for="città">Città:</label>
+      <input type="città" class="form-control" id="città" placeholder="Domodossola" name="città">
+    </div>
+    <button type="premi" class="btn btn-primary">Premi qui!</button>
   </form>
 </div>
 
