--- a/index.html
+++ b/index.html
@@ -78,6 +78,13 @@
       <input type="città" class="form-control" id="città" placeholder="Domodossola" name="città">
     </div>
     <button type="premi" class="btn btn-primary">Premi qui!</button>
+    <p id="demo"></p>
+
+    <script>
+    function myFunction() {
+      document.getElementById("demo").innerHTML = "Hello World";
+    }
+    </script>
   </form>
 </div>
 
