--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
       <label for="città">Città:</label>
       <input type="città" class="form-control" id="città" placeholder="Domodossola" name="città">
     </div>
-    <button type="premi" class="btn btn-primary">Premi qui!</button>
+    <button onclick="myFunction()">Premi qui!</button>
     <p id="demo"></p>
 
     <script>
