--- a/index.html
+++ b/index.html
@@ -84,6 +84,10 @@
       var x = document.getElementById("nome").value;
       document.getElementById("demo").innerHTML = x;
     }
+    function myFunction() {
+      var x = document.getElementById("età").value;
+      document.getElementById("demo").innerHTML = x;
+    }
     </script>
   </form>
 </div>
