--- a/index.html
+++ b/index.html
@@ -79,6 +79,7 @@
     </div>
     <button onclick="myFunction()">Premi qui!</button>
     <p id="demo"></p>
+    <p id="demo2"></p>  
     <script>
     function myFunction() {
       var x = document.getElementById("nome").value;
@@ -86,7 +87,7 @@
     }
     function myFunction() {
       var x = document.getElementById("età").value;
-      document.getElementById("demo").innerHTML = x;
+      document.getElementById("demo2").innerHTML = x;
     }
     </script>
   </form>
