--- a/index.html
+++ b/index.html
@@ -86,8 +86,8 @@
       document.getElementById("demo").innerHTML = x;
     }
     function myFunction() {
-      var x = document.getElementById("età").value;
-      document.getElementById("demo2").innerHTML = x;
+      var y = document.getElementById("età").value;
+      document.getElementById("demo2").innerHTML = y;
     }
     </script>
   </form>
