--- a/index.html
+++ b/index.html
@@ -78,8 +78,7 @@
       <input type="città" class="form-control" id="città" placeholder="Domodossola" name="città">
     </div>
     <button onclick="myFunction()">Premi qui!</button>
-    <p id="demo"></p>
-    <p id="demo2"></p>  
+    <p id="demo">id="demo2"></p>
     <script>
     function myFunction() {
       var x = document.getElementById("nome").value;
