--- a/index.html
+++ b/index.html
@@ -75,20 +75,23 @@
     </div>
     <div class="form-group">
       <label for="città">Città:</label>
-      <input type="città" class="form-control" id="città" placeholder="Domodossola" name="città">
+      <input type="città" class="form-control" id="città" placeholder="Vinooo" name="città">
     </div>
     <button onclick="myFunction()">Premi qui!</button>
-    <p id="demo">id="demo2"></p>
+    <p id="demo"></p>
+    <p id="demo2"></p>
+    <p id="demo3"></p>
     <script>
     function myFunction() {
       var x = document.getElementById("nome").value;
       document.getElementById("demo").innerHTML = x;
       var y = document.getElementById("età").value;
       document.getElementById("demo2").innerHTML = y;
+      var z = document.getElementById("città").value;
+      document.getElementById("demo3").innerHTML = z;
     }
     </script>
   </form>
 </div>
-
 </body>
 </html>
