--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 	
 <div class="container">
   <h2>Compila il seguente modulo:</h2>
-  <form action="/action_page.html">
+  <form>
     <div class="form-group">
       <label for="nome">Nome:</label>
       <input type="nome" class="form-control" id="nome" placeholder="Mario Rossi" name="nome">
